implemented auth with bearer token (JWT), added endpoint to get a token
