# service/api/apiRouter.js
@@ -6,6 +6,9 @@ const publishers = require('./endpoints/publishers')
 const authors = require('./endpoints/authors')
 const categories = require('./endpoints/categories')
 const logger = require('../../technical services/utils/logger')
+const auth = require('./endpoints/auth')
+
+const jwtHandler = require('../../technical services/utils/jwtHandler')
 
 router.use(function timeLog (req, res, next) {
     logger.debug('API Request: ' + req.method + ' ' + req.url)
@@ -15,9 +18,10 @@ router.use(function timeLog (req, res, next) {
 router.use(bodyParser.urlencoded({ extended: false }))
 router.use(bodyParser.json())
 
-router.use('/books', books)
-router.use('/authors', authors)
-router.use('/categories', categories)
-router.use('/publishers', publishers)
+router.use('/auth', auth)
+router.use('/books', jwtHandler.verifyToken, books)
+router.use('/authors', jwtHandler.verifyToken, authors)
+router.use('/categories', jwtHandler.verifyToken, categories)
+router.use('/publishers', jwtHandler.verifyToken, publishers)
 
 module.exports = router
